[gd_scene load_steps=10 format=3 uid="uid://csh3vo3mmsq6d"]

[ext_resource type="Script" path="res://menu.gd" id="1_ujlrn"]
[ext_resource type="Texture2D" uid="uid://356qs3vbh8rc" path="res://fon_340kh200.png" id="2_wht8d"]
[ext_resource type="Texture2D" uid="uid://d0rb7xy0y6y0v" path="res://logo.png" id="3_38gid"]
[ext_resource type="Texture2D" uid="uid://nuj0vyipqxak" path="res://igrat80kh40.png" id="3_r036u"]
[ext_resource type="Texture2D" uid="uid://cjswnn5w80ddo" path="res://urovni.png" id="4_ks8p2"]
[ext_resource type="Texture2D" uid="uid://tu5l07wc4qga" path="res://nastroyki80kh40.png" id="5_1nydv"]
[ext_resource type="AudioStream" uid="uid://dx08dfet2dyif" path="res://Sounds/start.wav" id="5_7vour"]
[ext_resource type="Texture2D" uid="uid://cma3tbqrj1otx" path="res://vyti.png" id="6_id7ve"]
[ext_resource type="AudioStream" uid="uid://7r13my63if73" path="res://Sounds/background_music.mp3" id="8_6xisk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -380.0
offset_bottom = -240.0
script = ExtResource("1_ujlrn")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 380.0
offset_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wht8d")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
offset_right = 380.0
offset_bottom = 240.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("3_38gid")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("3_r036u")
flat = true

[node name="start" type="AudioStreamPlayer" parent="MarginContainer/VBoxContainer/HBoxContainer/Start"]
stream = ExtResource("5_7vour")
volume_db = -30.919

[node name="Levels" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("4_ks8p2")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("5_1nydv")
flat = true

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
icon = ExtResource("6_id7ve")
flat = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_6xisk")
volume_db = -30.83
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Levels" to="." method="_on_levels_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Quit" to="." method="_on_quit_pressed"]
